Viewport X-Ray is influencing snapping even in material mode #93477

Closed
opened 2021-11-29 15:26:18 +01:00 by Dalai Felinto · 8 comments

Blender Version
Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-29 10:04, hash: b31250feba
Worked: Not sure how to reproduce this without the asset browser in 3.0.

Short description of error
In material and rendered modes the X-Ray option is still affecting the snapping, even though it shows as disabled in the UI.

Exact steps for others to reproduce the error
Try to drag the cube from the asset browser into the scene. It doesn't snap to the floor properly.

simple.blend

**Blender Version** Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-29 10:04, hash: `b31250feba` Worked: Not sure how to reproduce this without the asset browser in 3.0. **Short description of error** In material and rendered modes the X-Ray option is still affecting the snapping, even though it shows as disabled in the UI. **Exact steps for others to reproduce the error** Try to drag the cube from the asset browser into the scene. It doesn't snap to the floor properly. [simple.blend](https://archive.blender.org/developer/F12657953/simple.blend)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Note: There can be a separate discussion as to which fallback to have for X-Ray mode. But this is orthogonal to this bug. The main issue here is that an option that is disabled in the UI is influencing Blender in any way (and it shouldn't).

Note: There can be a separate discussion as to which fallback to have for X-Ray mode. But this is orthogonal to this bug. The main issue here is that an option that is disabled in the UI is influencing Blender in any way (and it shouldn't).

Added subscriber: @Aiden_inman

Added subscriber: @Aiden_inman
Germano Cavalcante was assigned by Dalai Felinto 2021-11-29 15:41:27 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
The general occlusion test ()ignoring faces in x-ray) is intended only for snap in edit mode (for Bmesh).
The occlusion test in other cases only checks whether the "viewport display" of the object is wire or boundbox.

The dragdrop snap should be done to final geometry and not bmesh.

I can confirm the problem. The general occlusion test ()ignoring faces in x-ray) is intended only for snap in edit mode (for Bmesh). The occlusion test in other cases only checks whether the "viewport display" of the object is wire or boundbox. The dragdrop snap should be done to final geometry and not bmesh.

This issue was referenced by 9d6680e7f9

This issue was referenced by 9d6680e7f9b7f33e916551cc8b8deb355309838a

This issue was referenced by 251c017534

This issue was referenced by 251c0175349d5b2e2e55e7aa19a0dd41d3281931

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93477
No description provided.